Updated Gabow SCC